# vim: set noexpandtab:

2012-06-19 Steve
	* Fixed event timer calculation
	* Added helper script for tagging package: scripts/makeTag.sh
	* Tagging SusyCommon-00-00-08

2012-06-18 Steve
	* Added PDFTool for reweighting 7 TeV -> 8 TeV
	* Added switch in Makefile for controlling PDFTool usage.
		* Turn on USEPDFTOOL switch to use the tool.
		* Requires corresponding switch to be set in MultiLep package as well
	* Tagging SusyCommon-00-00-07

2012-06-17 Steve
	* Added TStopwatch for monitoring processing time

2012-06-11 Steve
	* Updating syntax and conventions for code consistency:
		* SYSTEMATIC -> SusyNtSys
		* NOM -> NtSys_NOM
		* etc.
	* Tagging SusyCommon-00-00-06

2012-06-05 Steve
	* Updated code to work with current fiveinvfb MultiLep pkg, 
	  which is here (directory structure is weird):
	  svn+ssh://svn.cern.ch/reps/atlasphys/Physics/SUSY/Analyses/Multilepton/trunk/fiveinvfb/MultiLep

2012-05-30 Matt
	* The great restructuring has begun! Merging now.
	* All things relevant to running over SusyNt moved to separate directory: SusyNtuple
	* Merged override of xsec in NtMaker
	* Added avgMu to NtMaker
	* Added electron cluster Energy
	* Added jet truth label	
	* Tagged SusyCommon-00-00-05 (added after.. sorry )	

#-----------------------------------------------------------------------------------------
# Changes made in parallel with Steve's Original version by Matt/Anyes/Serhan
#-----------------------------------------------------------------------------------------

2012-05-28 Matt
	* Corrected trigger matching. Was called after filling. Garbage results.

2012-05-23 Matt
	* Added cutflow histogram to susynt storing info on cuts applied upstream

2012-05-18 Matt
	* Compared cutflow on su4 sample. Match up to Cosmic Veto.
	* Added a dump method that can be filled.. Could be deleted, leave for now.

2012-05-17 Matt
	* Updated NtMaker to handle new way to save met
	* Updated Way sys is looped over

2012-05-11 Matt